--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3,3 +3,7 @@ sidebar:
     playerbox:              Player-box
     register:               New player
     reset_password:         Forgot your password?
+
+security:
+    login:
+        title:              Please sign in
