Create ADMIN and GAME

--- a/src/Argon/WebBundle/Resources/translations/ArgonWebBundle.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/ArgonWebBundle.en.yml
@@ -7,3 +7,6 @@ sidebar:
     user:
         register:           New player
         reset_password:     Forgot your password?
+
+layout:
+    admin:                  Control Panel
