--- a/src/Argon/WebBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/admin.en.yml
@@ -1,7 +1,7 @@
 
 sidebar:
     dashboard:              Dashboard
-    game:                   Games
+    character:              Characters
 
 dashboard:
     title:                  Dashboard
