--- a/src/Argon/WebBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/admin.en.yml
@@ -2,6 +2,7 @@
 sidebar:
     dashboard:              Dashboard
     character:              Characters
+    race:                   Races
 
 dashboard:
     title:                  Dashboard
