[Common] Admin player

--- a/src/Argon/WebBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/admin.en.yml
@@ -1,6 +1,7 @@
 
 sidebar:
     dashboard:              Dashboard
+    player:                 Players
     character:              Characters
     race:                   Races
 
