[Game] Add Types to New Character

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -1,4 +1,4 @@
 
 character:
     new:                    New Character
-    created:                Your character has been created
+    created:                Your character has been created.
