[Game] Rename CharacterType for CharacterAbility

--- a/src/Argon/GameBundle/Resources/translations/forms.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/forms.en.yml
@@ -1,5 +1,5 @@
 
-character_type:
+character_ability:
     help:                   Please set sequential modifiers to give priorities.
     types:
         STR:                Strengh
