[Game] Abilities translations

--- a/src/Argon/GameBundle/Resources/translations/forms.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/forms.en.yml
@@ -2,8 +2,10 @@
 character_ability:
     help:                   Please set sequential modifiers to give priorities.
     types:
-        STR:                Strengh
-        DEX:                Dexity
+        STR:                Strength
+        DEX:                Dexterity
+        CON:                Constitution
+        INT:                Intelligence
         WIS:                Wisdom
 
 character:
