--- a/src/Argon/CommonBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/CommonBundle/Resources/translations/admin.en.yml
@@ -3,4 +3,5 @@ player:
     title:                  Players
     username:               Username
     name:                   Name
+    lastlogin:              Last Login
     empty:                  There are no players in the system yet.
