[Game] Character Experience

--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -8,6 +8,12 @@ character:
 character_ability:
     empty:                  There are no abilities.
 
+character_experience:
+    at:                     Date
+    value:                  Experience
+    reason:                 Reason
+    empty:                  This character has no experience.
+
 race:
     title:                  Races
     code:                   Code
