[Game] Character Experience New

--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -12,9 +12,10 @@ character_ability:
 character_experience:
     title:                  Experience
     at:                     Date
-    value:                  Experience
     reason:                 Reason
     empty:                  This character has no experience.
+    actions:
+        new:                Add experience
 
 race:
     title:                  Races
