--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -22,6 +22,8 @@ race:
     code:                   Code
     name:                   Name
     modifier:               Modifier
+    parent:                 Parent
+    parent_empty:           (root)
     children:               Children
     empty:                  There are no races in the system yet.
 
@@ -32,5 +34,7 @@ skill:
     modifier:               Modifier
     max:                    Max
     max_empty:              (no limit)
+    parent:                 Parent
+    parent_empty:           (root)
     children:               Children
     empty:                  There are no skills in the system yet.
