[Game] Skill: Add ability to view

--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -29,6 +29,8 @@ race:
 
 skill:
     title:                  Skills
+    ability:                Ability
+    ability_empty:          (all)
     code:                   Code
     name:                   Name
     modifier:               Modifier
