[Game][Skill] Filter ability

--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -29,6 +29,7 @@ race:
 
 skill:
     title:                  Skills
+    of_ability:             of %ability%
     ability:                Ability
     ability_empty:          (all)
     code:                   Code
