[Game][Skill] Show skills

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -6,6 +6,7 @@ character:
     race:                   Race
     abilities:              Abilities
     experience:             Experience
+    skills:                 Skills
     empty:                  You don't have any character created yet.
     new:                    New Character
     created:                Your character has been created.
@@ -14,3 +15,9 @@ character_experience:
     created:                The character has new experience.
     at:                     Date
     reason:                 Reason
+
+skill:
+    ability:                Ability
+    ability_empty:          (all)
+    name:                   Name
+    empty:                  There are no skills in the system yet.
