[Game][Skill] Basic CharacterSkill form

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -16,6 +16,9 @@ character_experience:
     at:                     Date
     reason:                 Reason
 
+character_skill:
+    updated:                Your skills were updated.
+
 skill:
     ability:                Ability
     ability_empty:          (all)
