[Style] Patricio's Modifications

--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -28,7 +28,7 @@ skill:
     title:                  Skills
     of_ability:             of %ability%
     ability:                Ability
-    ability_empty:          (all)
+    ability_empty:          General
     name:                   Name
     modifier:               Modifier
     max:                    Max
