--- a/src/Argon/GameBundle/Resources/translations/forms.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/forms.en.yml
@@ -10,3 +10,6 @@ character_ability:
 
 character:
     race_empty_value:       Select your character's race
+
+Game: Select a Game
+Name: Name your Character
