--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -23,4 +23,5 @@ skill:
     ability_empty:          General
     name:                   Name
     price:                  Price
+    level:                  Level
     empty:                  There are no skills in the system yet.
