--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -19,6 +19,7 @@ character_experience:
 
 character_skill:
     title:                  Skills
+    empty:                  This character has no skills.
 
 race:
     title:                  Races
