--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -6,6 +6,7 @@ character:
     race:                   Race
     abilities:              Abilities
     experience:             Experience
+    switch:                 Switch
     skills:                 Skills
     empty:                  You don't have any character created yet.
     new:                    New Character
