[News] Simple ADMIN list

--- a/src/Argon/WebBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/admin.en.yml
@@ -5,6 +5,7 @@ sidebar:
     character:              Characters
     race:                   Races
     skill:                  Skills
+    news:                   News
 
 dashboard:
     title:                  Dashboard
