--- a/src/Argon/NewsBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/NewsBundle/Resources/translations/admin.en.yml
@@ -9,6 +9,8 @@ news:
         published_at:       Published at %date%
         body:               Body
         empty:              There are no news posts in the system yet.
+        published:          Post published.
         created:            Post created.
     actions:
         new:                New Post
+        publish:            Publish
