--- a/src/Argon/GameBundle/Resources/translations/forms.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/forms.en.yml
@@ -10,6 +10,13 @@ character_ability:
 
 character:
     race_empty_value:       Select your character's race
+    submit:                 Create Character
+
+character_game:
+    submit:                 Next
+
+character_skills:
+    submit:                 Buy Skills
 
 Game: Select a Game
 Name: Name your Character
