--- a/src/Argon/WebBundle/Resources/translations/web.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/web.en.yml
@@ -19,6 +19,7 @@ sidebar:
             description:    List of my charecters
     character:
         hello:              You are acting as character %name%.
+        inbox:              Inbox
 
 layout:
     home:                   Home
