--- a/src/Argon/NewsBundle/Resources/translations/web.en.yml
+++ b/src/Argon/NewsBundle/Resources/translations/web.en.yml
@@ -3,6 +3,7 @@ news:
     posts:                  ArgonBook News
     view_all_posts:         View all
     post:
-        footer:             %creator% on %published%
+        footer:             "%creator% on %published%"
         published:          Post published.
         created:            Post created.
+        updated:            Post updated.
