--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -4,6 +4,7 @@ character:
     of_game:                of %game%
     info:                   Information
     abilities:              Abilities
+    story_placeholder:      What do your character know?
     empty:                  There are no characters in the system yet.
 
 character_ability:
