--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -8,6 +8,7 @@ character:
     experience:             Experience
     switch:                 Switch
     skills:                 Skills
+    story_placeholder:      What do your character know?
     empty:                  You don't have any character created yet.
     new:                    New Character
     edit:                   Edit
