--- a/src/Argon/GameBundle/Resources/translations/admin.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/admin.en.yml
@@ -7,6 +7,7 @@ character:
     empty:                  There are no characters in the system yet.
     actions:
         confirm_story:      Confirm Story
+    story_confirm_reason:   Good Story!
 
 character_ability:
     empty:                  There are no abilities.
