[Game] Add story/note to view

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -9,6 +9,7 @@ character:
     switch:                 Switch
     skills:                 Skills
     note:                   Notes of the Director
+    story:                  Story
     story_placeholder:      What do your character know?
     story_confirmed:        The character story has been confirmed.
     story_not_confirmed:    |
