[Game] #9 Add color and MAX when is top limit

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -32,6 +32,7 @@ character_experience:
 character_skill:
     updated:                Your skills were updated.
     empty:                  Your character has not skills yet.
+    max:                    MAX
 
 skill:
     ability_empty:          General
