[Game] #9 Show all experience stats in the view

--- a/src/Argon/GameBundle/Resources/translations/web.en.yml
+++ b/src/Argon/GameBundle/Resources/translations/web.en.yml
@@ -26,6 +26,7 @@ character_experience:
     at:                     Date
     reason:                 Reason
     stats:
+        used_skills:        used in skills
         available:          available
         total:              total
 
