--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.en.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.en.yml
@@ -1,12 +1,36 @@
 
 security:
     login:
-        title:              Please sign in
+        title:              Please sign-in
 
 profile:
-    show:
-        logged_in_as:       You are signed in as %username%.
-        view_characters:    View my characters
-        goto_admin:         Go to the Control Panel
-        change_password:    Edit your password
-        edit_profile:       Edit your profile
+    title:                  Your account
+    admin:
+        title:              Administration
+        go:                 Go to Control Panel
+        version:            Version
+    characters:
+        title:              Characters
+    edit:
+        title:              Edit your profile
+        cancel:             Cancel
+    actions:
+        edit:               Edit
+        change_password:    Change password
+
+change_password:
+    title:                  Change password
+    cancel:                 Cancel
+
+resetting:
+    request:
+        title:              Ask for your password
+    reset:
+        title:              Reset your password
+
+registration:
+    title:                  Sign-up your player
+
+layout:
+    profile:                Profile
+    reset_password:         Forgot password?
