Fix more translations

--- a/src/Argon/WebBundle/Resources/translations/web.en.yml
+++ b/src/Argon/WebBundle/Resources/translations/web.en.yml
@@ -1,4 +1,7 @@
 
+homepage:
+    title:                  Alternate Reality Games Oriented Network
+
 sidebar:
     playerbox:              Player-box
     characterbox:           Character-box
