Remove the notion of sections

--- a/src/Argon/NewsBundle/Resources/translations/web.en.yml
+++ b/src/Argon/NewsBundle/Resources/translations/web.en.yml
@@ -1,6 +1,5 @@
 
 news:
-    posts:                  ArgonBook News
-    view_all_posts:         View all
+    posts:                  Latest News
     post:
         footer:             "%creator% on %published%"
