--- a/src/Argon/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Argon/UserBundle/Resources/translations/messages.en.yml
@@ -2,7 +2,7 @@
 
 admin:
   player:
-    title:     Players
+    players:   Players
     username:  Username
     name:      Name
     lastlogin: Last login
